--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         <div class="form  bg-[#15803D] rounded-xl h-auto w-auto mx-110 flex items-center justify-center mt-[50px]">
           
         <form action="" class="p-4">
-          <input type="text" value="" placeholder="Your Name" class=" w-[320px] rounded bg-white mt-1" />
+          <input type="text" value="" placeholder="Your Name" class=" w-[320px] rounded bg-white mt-1 " />
           <br>
           <input type="email" value="" placeholder="Your Email Address" class=" w-[320px] rounded bg-white mt-1" />
           <br>
@@ -343,10 +343,12 @@
             <option>3</option>
           </select>
           <br>
-          <button class="w-[320px] rounded bg-[#FACC15] mt-1 text-[#0F8D2D]">Donate Now</button>
+          <button class="w-[320px] rounded bg-[#FACC15] mt-1 text-[#0F8D2D] ">Donate Now</button>
         </form>
         </div>
       </section>
+
+      <section class="bg-[#14532D] h-auto"><p class="text-white p-2 text-center">© 2025 Green Earth. All Rights Reserved.</p></section>
     </footer>
 
     <script src="./js/html.js"></script>
