--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <section
         class="banner h-[385px] bg-[#CFF0DC] flex justify-center items-center"
       >
-        <div class="left-leaf mt-28">
+        <div class="left-leaf ">
           <img src="./assets/hero-leaf1.png" alt="" />
         </div>
         <div class="banner-title text-center p-4">
@@ -94,7 +94,7 @@
             Get Involved
           </button>
         </div>
-        <div class="mt-28">
+        <div >
           <img src="./assets/hero-leaf2.png" alt="" />
         </div>
       </section>
